--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,24 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #000000;
+  --foreground: #ffffff;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--foreground) !important;
+  background: var(--background) !important;
+}
+
+#recentRequestsContainer .requestsScollableDiv::-webkit-scrollbar {
+  width: 2px !important;
+  border-radius: 100% !important;
+  background-color: #e5e5e585 !important;
+}
+
+#recentRequestsContainer .requestsScollableDiv::-webkit-scrollbar-thumb {
+  background-color: #3a3a3c;
+  border-radius: 100% !important;
 }
