--- a/app/globals.css
+++ b/app/globals.css
@@ -20,16 +20,12 @@
     float: left;
 }
 
+.leftBox {
+    background-color: #1C1C1E;
+}
+
 .rightBox {
-    /* margin-left: 5%; */
     background-color: #2C2C2C;
-    height: 100vh;
-    width: 50%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10%;
 }
 
 .continueButton {
