--- a/app/globals.css
+++ b/app/globals.css
@@ -112,6 +112,12 @@ body {
     }
 }
 
+@media (min-width: 1535px) {
+    .gradient-background-box {
+        padding: 20px 20px 30px 7px;
+    }
+}
+
 @media (min-width: 1900px) {
     .gradient-background-box {
         padding: 30px 30px 30px 7px;
