--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,10 @@ body {
     /* Optional: Adds rounded corners */
 }
 
+.cards .card {
+    background-color: #0D0C0C;
+}
+
 .gradient-background-box {
     display: inline-block;
     /* Ensures the background only wraps around the text */
